# navigation_test

./: .gitignore  readme.md
scripts/: CMakeLists.txt  package.xml  package.xml~  setup.py
scripts/data/: offline.ini  offline2.ini  offline3.ini  pips_octo_comparison.rviz  real_turtlebot_demo.rviz  rosbag.rviz
scripts/include/: test_depth.h
scripts/launch/: a1_gpf_pg_hybrid_newlaser_generic_model_depth_ego_controller.launch  baseLocalPlanner_controller.launch  baseline_rl_goal_controller.launch  baseline_to_goal_controller.launch  baseline_to_goal_no_recovery_controller.launch  box_turtle_depth_pips_dwa_controller.launch  box_turtle_egocylindrical_pips_dwa_controller.launch  box_turtle_egocylindrical_pips_dwa_sim_1_controller.launch  box_turtle_egocylindrical_pips_dwa_sim_2_controller.launch  box_turtle_egocylindrical_pips_dwa_sim_3_controller.launch  box_turtle_egocylindrical_pips_dwa_sim_4_controller.launch  box_turtle_stereo_egocylindrical_pips_dwa_controller.launch  brute_force_controller.launch  composite_controller.launch  custom_dwa_controller.launch  depth_pips_dwa_controller.launch  depth_pips_dwa_no_recovery_controller.launch  depth_remapping.launch  depth_to_disparity.launch  dwa_controller.launch  dwa_no_recovery_controller.launch  eband_controller.launch  ec_rh_base.launch  egocylindrical_pips_dwa_controller.launch  egocylindrical_pips_dwa_no_recovery_controller.launch  gazebo_tests_base.launch  gen_rtab_record.launch  global_planning_comparison.launch  goal_regression_controller.launch  informed_depth_local.launch  master_launcher.launch  (+119 more)
(+1169 files in other folders)
